[tool.poetry]
name = "ssb-datadoc"
version = "0.4.0"
description = "Document dataset metadata. For use in Statistics Norway's metadata system."
authors = ["Statistics Norway <stat-dev@ssb.no>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/statisticsnorway/datadoc"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Dash",
    "Typing :: Typed",
]

packages = [{ include = "datadoc" }]

[tool.poetry.scripts]
datadoc = 'datadoc.app:main'

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pyarrow = ">=8.0.0"
dash = ">=2.11"
pydantic = ">2"
dash-bootstrap-components = ">=1.1.0"
pandas = ">=1.4.2"
ssb-datadoc-model = "==4.1.2"
dapla-toolbelt = ">=1.3.3"
gcsfs = ">=2022.7.1"
gunicorn = ">=21.2.0"
flask-healthz = ">=0.0.3"

[tool.poetry.group.dev.dependencies]
mypy = ">=0.950"
black = ">=22.3.0"
pytest = ">=7.1.2"
pytest-cov = ">=3.0.0"
nbstripout = ">=0.5.0"
python-kacl = "*"
pre-commit = "*"
pytest-mock = "*"
poethepoet = "*"
ruff = ">=0.0.284"
deptry = "^0.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = "pytest -vvvv --cache-clear --cov-report=term-missing --cov=."
jupyter = "jupyter lab"
install-kernel = "python -m ipykernel install --user --name datadoc"
datadoc = "python datadoc/app.py"

[tool.black]
target-version = ["py310", "py311"]
include = '\.pyi?$'

[tool.coverage.run]
omit = [
    "datadoc/tests/*",
    "datadoc/__init__.py",
    "datadoc/frontend/callbacks/register.py",
]

[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    "old",
    "build",
    "dist",
    ".venv",
    ".eggs",
    ".tox",
    ".ipynb_checkpoints",
]
ignore = ["A003", "B008", "E501"]
select = ["ALL"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pep8-naming]
classmethod-decorators = ["classmethod", "validator", "root_validator"]

[tool.ruff.per-file-ignores]
"*/__init__.py" = ["F401"]
"datadoc/frontend/callbacks/register_callbacks.py" = ["C901"]
"datadoc/tests/*" = [
    # asserts are encouraged in pytest
    "S101",
    # return annotations don't add value for test functions
    "ANN201",
    # docstrings are overkill for test functions
    "D103",
]
# This filename is a convention for Gunicorn
"datadoc/gunicorn.conf.py" = ["N999"]
